fix upload from base64 and create the thumbnail
